fix get cards by game