@@ -150,10 +150,12 @@ public class CardServiceTest {
         Card card1 = new Card();
         card1.setName("Card One");
         card1.setGame(game);
+        card1.setGameId(gameId);
 
         Card card2 = new Card();
         card2.setName("Another Card");
         card2.setGame(game);
+        card2.setGameId(UUID.randomUUID());
 
         List<Card> cards = List.of(card1, card2);
 
@@ -164,8 +166,8 @@ public class CardServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("Card One", result.get(0).getName());
-        verify(gameRepository, times(1)).findById(gameId);
+        assertEquals("Card One", result.getFirst().getName());
+        verify(gameRepository, times(2)).findById(gameId);
         verify(cardRepository, times(1)).findAll();
     }
 
@@ -186,7 +188,7 @@ public class CardServiceTest {
         cardsInDbSecondTime.add(externalCard);
 
         when(gameRepository.findById(gameId)).thenReturn(Optional.of(game));
-        when(cardRepository.findAll()).thenReturn(new ArrayList<Card>()).thenReturn(cardsInDbSecondTime);
+        when(cardRepository.findAll()).thenReturn(new ArrayList<>()).thenReturn(cardsInDbSecondTime);
         when(externalCardClient.getCardsByName(game, "External")).thenReturn(List.of(externalCard));
         when(cardRepository.save(any(Card.class))).thenReturn(externalCard);
 
@@ -194,8 +196,8 @@ public class CardServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("External Card", result.get(0).getName());
-        verify(gameRepository, times(1)).findById(gameId);
+        assertEquals("External Card", result.getFirst().getName());
+        verify(gameRepository, times(2)).findById(gameId);
         verify(cardRepository, times(2)).findAll();
         verify(externalCardClient, times(1)).getCardsByName(game, "External");
         verify(cardRepository, times(1)).save(externalCard);
